@@ -1,3 +1,8 @@
+Sun Nov 16 01:13:58 PST 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	  - Stop the new message notification when the tab is selected.
+
 Sun Nov 16 01:01:29 PST 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
